--- a/datadog/datadog-by-usage.ipynb
+++ b/datadog/datadog-by-usage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[4 rows x 710 columns]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 387,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 390,
    "metadata": {
     "scrolled": true
    },
@@ -429,7 +429,7 @@
        "[709 rows x 5 columns]"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "[709 rows x 5 columns]"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 392,
    "metadata": {
     "scrolled": true
    },
@@ -716,7 +716,7 @@
        "[709 rows x 2 columns]"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "[709 rows x 7 columns]"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1050,7 @@
        "[258 rows x 4 columns]"
       ]
      },
-     "execution_count": 340,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 395,
    "metadata": {
     "scrolled": true
    },
@@ -1329,7 +1329,7 @@
        " 'd2.xlarge']"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
        "[125 rows x 7 columns]"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 396,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1533,7 +1533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
@@ -1961,7 +1961,7 @@
        "691     0.959998           APS1-EBS  VolumeUsage.gp2  "
       ]
      },
-     "execution_count": 343,
+     "execution_count": 397,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1973,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 398,
    "metadata": {
     "scrolled": false
    },
@@ -2154,7 +2154,7 @@
        "[149 rows x 7 columns]"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 398,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 399,
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2472,7 @@
        "32  USW2-EBSOptimized       0.000000       0.000000       0.000000"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 399,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 400,
    "metadata": {},
    "outputs": [
     {
@@ -2536,7 +2536,7 @@
        "Month 3  445250"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 400,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [
     {
@@ -2602,7 +2602,7 @@
        "Month 3  5156.31"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 401,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2617,7 +2617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [
     {
@@ -2668,7 +2668,7 @@
        "Month 3  12991.3"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 402,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2683,7 +2683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 403,
    "metadata": {
     "scrolled": true
    },
@@ -2746,7 +2746,7 @@
        "Month 3      381938    50557.2"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2761,7 +2761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [
     {
@@ -2816,7 +2816,7 @@
        "Month 3     381938   50557.2"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 404,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -2901,7 +2901,7 @@
        "2  Month 3     381938   50557.2  445250  5156.31  12991.3"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -2960,7 +2960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
@@ -2993,16 +2993,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb1c12defd0>"
+       "<matplotlib.legend.Legend at 0x7fb1c1261510>"
       ]
      },
-     "execution_count": 354,
+     "execution_count": 408,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3029,6 +3029,124 @@
     "plt.stackplot(df['Month'],colsList,labels=colsLabels)\n",
     "plt.legend(loc='upper left',title='EC2 Usage Types',bbox_to_anchor=(1.05,1),borderaxespad=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 413,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>HeavyUsage</th>\n",
+       "      <th>SpotUsage</th>\n",
+       "      <th>Box</th>\n",
+       "      <th>EBS</th>\n",
+       "      <th>ES</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>WeekAvg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>308797.468542</td>\n",
+       "      <td>83980.381860</td>\n",
+       "      <td>646344.069335</td>\n",
+       "      <td>3150.944309</td>\n",
+       "      <td>8709.544</td>\n",
+       "      <td>1.050982e+06</td>\n",
+       "      <td>241605.151275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>334326.042326</td>\n",
+       "      <td>69175.524800</td>\n",
+       "      <td>502026.978250</td>\n",
+       "      <td>3524.985412</td>\n",
+       "      <td>9266.715</td>\n",
+       "      <td>9.183202e+05</td>\n",
+       "      <td>211108.102480</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>381938.499745</td>\n",
+       "      <td>50557.230344</td>\n",
+       "      <td>445250.378513</td>\n",
+       "      <td>5156.312689</td>\n",
+       "      <td>12991.276</td>\n",
+       "      <td>8.958937e+05</td>\n",
+       "      <td>205952.574090</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Month     HeavyUsage     SpotUsage            Box          EBS         ES  \\\n",
+       "0     1  308797.468542  83980.381860  646344.069335  3150.944309   8709.544   \n",
+       "1     2  334326.042326  69175.524800  502026.978250  3524.985412   9266.715   \n",
+       "2     3  381938.499745  50557.230344  445250.378513  5156.312689  12991.276   \n",
+       "\n",
+       "          Total        WeekAvg  \n",
+       "0  1.050982e+06  241605.151275  \n",
+       "1  9.183202e+05  211108.102480  \n",
+       "2  8.958937e+05  205952.574090  "
+      ]
+     },
+     "execution_count": 413,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Total'] = df[cols].sum(axis=1)\n",
+    "df['WeekAvg'] = df['Total']/4.35\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
