--- a/datadog/datadog-ec2-costs.ipynb
+++ b/datadog/datadog-ec2-costs.ipynb
@@ -510,55 +510,211 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 26 entries, 0 to 25\n",
-      "Data columns (total 30 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   Weeks   26 non-null     object\n",
-      " 1   1       26 non-null     object\n",
-      " 2   2       26 non-null     object\n",
-      " 3   3       26 non-null     object\n",
-      " 4   4       26 non-null     object\n",
-      " 5   5       26 non-null     object\n",
-      " 6   6       26 non-null     object\n",
-      " 7   7       26 non-null     object\n",
-      " 8   8       26 non-null     object\n",
-      " 9   9       26 non-null     object\n",
-      " 10  10      26 non-null     object\n",
-      " 11  11      26 non-null     object\n",
-      " 12  12      26 non-null     object\n",
-      " 13  13      26 non-null     object\n",
-      " 14  14      26 non-null     object\n",
-      " 15  15      26 non-null     object\n",
-      " 16  16      26 non-null     object\n",
-      " 17  17      26 non-null     object\n",
-      " 18  18      26 non-null     object\n",
-      " 19  21      26 non-null     object\n",
-      " 20  22      26 non-null     object\n",
-      " 21  23      26 non-null     object\n",
-      " 22  24      26 non-null     object\n",
-      " 23  25      26 non-null     object\n",
-      " 24  26      26 non-null     object\n",
-      " 25  27      26 non-null     object\n",
-      " 26  28      26 non-null     object\n",
-      " 27  29      26 non-null     object\n",
-      " 28  30      26 non-null     object\n",
-      " 29  31      26 non-null     object\n",
-      "dtypes: object(30)\n",
-      "memory usage: 6.2+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>EC2-Name</th>\n",
+       "      <th>Weeks</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
+       "      <th>30</th>\n",
+       "      <th>31</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>49326.39</td>\n",
+       "      <td>41283.48</td>\n",
+       "      <td>43857.73</td>\n",
+       "      <td>32106.50</td>\n",
+       "      <td>26520.98</td>\n",
+       "      <td>20613.60</td>\n",
+       "      <td>10890.39</td>\n",
+       "      <td>18333.30</td>\n",
+       "      <td>20100.29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3381.43</td>\n",
+       "      <td>3381.43</td>\n",
+       "      <td>2787.15</td>\n",
+       "      <td>2321.59</td>\n",
+       "      <td>2513.62</td>\n",
+       "      <td>2270.83</td>\n",
+       "      <td>3095.74</td>\n",
+       "      <td>2775.86</td>\n",
+       "      <td>1347.87</td>\n",
+       "      <td>1318.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>49299.11</td>\n",
+       "      <td>42171.36</td>\n",
+       "      <td>26019.21</td>\n",
+       "      <td>31950.52</td>\n",
+       "      <td>27102.72</td>\n",
+       "      <td>20866.44</td>\n",
+       "      <td>10944.99</td>\n",
+       "      <td>18886.68</td>\n",
+       "      <td>20532.05</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3472.20</td>\n",
+       "      <td>3442.94</td>\n",
+       "      <td>2797.79</td>\n",
+       "      <td>2405.07</td>\n",
+       "      <td>2514.28</td>\n",
+       "      <td>2291.84</td>\n",
+       "      <td>2703.46</td>\n",
+       "      <td>2775.86</td>\n",
+       "      <td>980.13</td>\n",
+       "      <td>1318.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>62570.05</td>\n",
+       "      <td>42687.96</td>\n",
+       "      <td>20914.81</td>\n",
+       "      <td>32824.60</td>\n",
+       "      <td>29119.87</td>\n",
+       "      <td>21101.85</td>\n",
+       "      <td>11608.38</td>\n",
+       "      <td>18614.13</td>\n",
+       "      <td>20583.64</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3440.95</td>\n",
+       "      <td>3438.29</td>\n",
+       "      <td>2793.00</td>\n",
+       "      <td>2432.98</td>\n",
+       "      <td>2513.62</td>\n",
+       "      <td>2248.68</td>\n",
+       "      <td>2703.46</td>\n",
+       "      <td>2775.86</td>\n",
+       "      <td>754.71</td>\n",
+       "      <td>1318.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>85672.67</td>\n",
+       "      <td>43086.54</td>\n",
+       "      <td>15780.66</td>\n",
+       "      <td>34643.33</td>\n",
+       "      <td>32981.04</td>\n",
+       "      <td>21160.02</td>\n",
+       "      <td>12455.52</td>\n",
+       "      <td>18673.47</td>\n",
+       "      <td>21215.71</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3438.29</td>\n",
+       "      <td>3438.29</td>\n",
+       "      <td>2792.73</td>\n",
+       "      <td>2554.90</td>\n",
+       "      <td>2851.07</td>\n",
+       "      <td>2282.36</td>\n",
+       "      <td>2703.46</td>\n",
+       "      <td>2775.86</td>\n",
+       "      <td>870.38</td>\n",
+       "      <td>1317.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>26</td>\n",
+       "      <td>73250.49</td>\n",
+       "      <td>43960.75</td>\n",
+       "      <td>10701.87</td>\n",
+       "      <td>30894.52</td>\n",
+       "      <td>39579.43</td>\n",
+       "      <td>21167.60</td>\n",
+       "      <td>12453.85</td>\n",
+       "      <td>19080.40</td>\n",
+       "      <td>20543.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3438.29</td>\n",
+       "      <td>3438.29</td>\n",
+       "      <td>2793.21</td>\n",
+       "      <td>2742.95</td>\n",
+       "      <td>2576.34</td>\n",
+       "      <td>2266.54</td>\n",
+       "      <td>2659.18</td>\n",
+       "      <td>2775.86</td>\n",
+       "      <td>1111.47</td>\n",
+       "      <td>1318.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "EC2-Name Weeks         1         2         3         4         5         6  \\\n",
+       "21          22  49326.39  41283.48  43857.73  32106.50  26520.98  20613.60   \n",
+       "22          23  49299.11  42171.36  26019.21  31950.52  27102.72  20866.44   \n",
+       "23          24  62570.05  42687.96  20914.81  32824.60  29119.87  21101.85   \n",
+       "24          25  85672.67  43086.54  15780.66  34643.33  32981.04  21160.02   \n",
+       "25          26  73250.49  43960.75  10701.87  30894.52  39579.43  21167.60   \n",
+       "\n",
+       "EC2-Name         7         8         9  ...       22       23       24  \\\n",
+       "21        10890.39  18333.30  20100.29  ...  3381.43  3381.43  2787.15   \n",
+       "22        10944.99  18886.68  20532.05  ...  3472.20  3442.94  2797.79   \n",
+       "23        11608.38  18614.13  20583.64  ...  3440.95  3438.29  2793.00   \n",
+       "24        12455.52  18673.47  21215.71  ...  3438.29  3438.29  2792.73   \n",
+       "25        12453.85  19080.40  20543.00  ...  3438.29  3438.29  2793.21   \n",
+       "\n",
+       "EC2-Name       25       26       27       28       29       30       31  \n",
+       "21        2321.59  2513.62  2270.83  3095.74  2775.86  1347.87  1318.83  \n",
+       "22        2405.07  2514.28  2291.84  2703.46  2775.86   980.13  1318.56  \n",
+       "23        2432.98  2513.62  2248.68  2703.46  2775.86   754.71  1318.30  \n",
+       "24        2554.90  2851.07  2282.36  2703.46  2775.86   870.38  1317.50  \n",
+       "25        2742.95  2576.34  2266.54  2659.18  2775.86  1111.47  1318.33  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfEC2CostsT.info()"
+    "dfEC2CostsT.tail()"
    ]
   },
   {
