--- a/datadog/datadog-ec2-costs.ipynb
+++ b/datadog/datadog-ec2-costs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -496,7 +496,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -560,123 +560,123 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
-       "      <td>22</td>\n",
-       "      <td>49326.39</td>\n",
-       "      <td>41283.48</td>\n",
-       "      <td>43857.73</td>\n",
-       "      <td>32106.50</td>\n",
-       "      <td>26520.98</td>\n",
-       "      <td>20613.60</td>\n",
-       "      <td>10890.39</td>\n",
-       "      <td>18333.30</td>\n",
-       "      <td>20100.29</td>\n",
+       "      <td>Week 22</td>\n",
+       "      <td>$49,326.39</td>\n",
+       "      <td>$41,283.48</td>\n",
+       "      <td>$43,857.73</td>\n",
+       "      <td>$32,106.50</td>\n",
+       "      <td>$26,520.98</td>\n",
+       "      <td>$20,613.60</td>\n",
+       "      <td>$10,890.39</td>\n",
+       "      <td>$18,333.30</td>\n",
+       "      <td>$20,100.29</td>\n",
        "      <td>...</td>\n",
-       "      <td>3381.43</td>\n",
-       "      <td>3381.43</td>\n",
-       "      <td>2787.15</td>\n",
-       "      <td>2321.59</td>\n",
-       "      <td>2513.62</td>\n",
-       "      <td>2270.83</td>\n",
-       "      <td>3095.74</td>\n",
-       "      <td>2775.86</td>\n",
-       "      <td>1347.87</td>\n",
-       "      <td>1318.83</td>\n",
+       "      <td>$3,381.43</td>\n",
+       "      <td>$3,381.43</td>\n",
+       "      <td>$2,787.15</td>\n",
+       "      <td>$2,321.59</td>\n",
+       "      <td>$2,513.62</td>\n",
+       "      <td>$2,270.83</td>\n",
+       "      <td>$3,095.74</td>\n",
+       "      <td>$2,775.86</td>\n",
+       "      <td>$1,347.87</td>\n",
+       "      <td>$1,318.83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
-       "      <td>23</td>\n",
-       "      <td>49299.11</td>\n",
-       "      <td>42171.36</td>\n",
-       "      <td>26019.21</td>\n",
-       "      <td>31950.52</td>\n",
-       "      <td>27102.72</td>\n",
-       "      <td>20866.44</td>\n",
-       "      <td>10944.99</td>\n",
-       "      <td>18886.68</td>\n",
-       "      <td>20532.05</td>\n",
+       "      <td>Week 23</td>\n",
+       "      <td>$49,299.11</td>\n",
+       "      <td>$42,171.36</td>\n",
+       "      <td>$26,019.21</td>\n",
+       "      <td>$31,950.52</td>\n",
+       "      <td>$27,102.72</td>\n",
+       "      <td>$20,866.44</td>\n",
+       "      <td>$10,944.99</td>\n",
+       "      <td>$18,886.68</td>\n",
+       "      <td>$20,532.05</td>\n",
        "      <td>...</td>\n",
-       "      <td>3472.20</td>\n",
-       "      <td>3442.94</td>\n",
-       "      <td>2797.79</td>\n",
-       "      <td>2405.07</td>\n",
-       "      <td>2514.28</td>\n",
-       "      <td>2291.84</td>\n",
-       "      <td>2703.46</td>\n",
-       "      <td>2775.86</td>\n",
-       "      <td>980.13</td>\n",
-       "      <td>1318.56</td>\n",
+       "      <td>$3,472.20</td>\n",
+       "      <td>$3,442.94</td>\n",
+       "      <td>$2,797.79</td>\n",
+       "      <td>$2,405.07</td>\n",
+       "      <td>$2,514.28</td>\n",
+       "      <td>$2,291.84</td>\n",
+       "      <td>$2,703.46</td>\n",
+       "      <td>$2,775.86</td>\n",
+       "      <td>$980.13</td>\n",
+       "      <td>$1,318.56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
-       "      <td>24</td>\n",
-       "      <td>62570.05</td>\n",
-       "      <td>42687.96</td>\n",
-       "      <td>20914.81</td>\n",
-       "      <td>32824.60</td>\n",
-       "      <td>29119.87</td>\n",
-       "      <td>21101.85</td>\n",
-       "      <td>11608.38</td>\n",
-       "      <td>18614.13</td>\n",
-       "      <td>20583.64</td>\n",
+       "      <td>Week 24</td>\n",
+       "      <td>$62,570.05</td>\n",
+       "      <td>$42,687.96</td>\n",
+       "      <td>$20,914.81</td>\n",
+       "      <td>$32,824.60</td>\n",
+       "      <td>$29,119.87</td>\n",
+       "      <td>$21,101.85</td>\n",
+       "      <td>$11,608.38</td>\n",
+       "      <td>$18,614.13</td>\n",
+       "      <td>$20,583.64</td>\n",
        "      <td>...</td>\n",
-       "      <td>3440.95</td>\n",
-       "      <td>3438.29</td>\n",
-       "      <td>2793.00</td>\n",
-       "      <td>2432.98</td>\n",
-       "      <td>2513.62</td>\n",
-       "      <td>2248.68</td>\n",
-       "      <td>2703.46</td>\n",
-       "      <td>2775.86</td>\n",
-       "      <td>754.71</td>\n",
-       "      <td>1318.30</td>\n",
+       "      <td>$3,440.95</td>\n",
+       "      <td>$3,438.29</td>\n",
+       "      <td>$2,793.00</td>\n",
+       "      <td>$2,432.98</td>\n",
+       "      <td>$2,513.62</td>\n",
+       "      <td>$2,248.68</td>\n",
+       "      <td>$2,703.46</td>\n",
+       "      <td>$2,775.86</td>\n",
+       "      <td>$754.71</td>\n",
+       "      <td>$1,318.30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
-       "      <td>25</td>\n",
-       "      <td>85672.67</td>\n",
-       "      <td>43086.54</td>\n",
-       "      <td>15780.66</td>\n",
-       "      <td>34643.33</td>\n",
-       "      <td>32981.04</td>\n",
-       "      <td>21160.02</td>\n",
-       "      <td>12455.52</td>\n",
-       "      <td>18673.47</td>\n",
-       "      <td>21215.71</td>\n",
+       "      <td>Week 25</td>\n",
+       "      <td>$85,672.67</td>\n",
+       "      <td>$43,086.54</td>\n",
+       "      <td>$15,780.66</td>\n",
+       "      <td>$34,643.33</td>\n",
+       "      <td>$32,981.04</td>\n",
+       "      <td>$21,160.02</td>\n",
+       "      <td>$12,455.52</td>\n",
+       "      <td>$18,673.47</td>\n",
+       "      <td>$21,215.71</td>\n",
        "      <td>...</td>\n",
-       "      <td>3438.29</td>\n",
-       "      <td>3438.29</td>\n",
-       "      <td>2792.73</td>\n",
-       "      <td>2554.90</td>\n",
-       "      <td>2851.07</td>\n",
-       "      <td>2282.36</td>\n",
-       "      <td>2703.46</td>\n",
-       "      <td>2775.86</td>\n",
-       "      <td>870.38</td>\n",
-       "      <td>1317.50</td>\n",
+       "      <td>$3,438.29</td>\n",
+       "      <td>$3,438.29</td>\n",
+       "      <td>$2,792.73</td>\n",
+       "      <td>$2,554.90</td>\n",
+       "      <td>$2,851.07</td>\n",
+       "      <td>$2,282.36</td>\n",
+       "      <td>$2,703.46</td>\n",
+       "      <td>$2,775.86</td>\n",
+       "      <td>$870.38</td>\n",
+       "      <td>$1,317.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
-       "      <td>26</td>\n",
-       "      <td>73250.49</td>\n",
-       "      <td>43960.75</td>\n",
-       "      <td>10701.87</td>\n",
-       "      <td>30894.52</td>\n",
-       "      <td>39579.43</td>\n",
-       "      <td>21167.60</td>\n",
-       "      <td>12453.85</td>\n",
-       "      <td>19080.40</td>\n",
-       "      <td>20543.00</td>\n",
+       "      <td>Week 26</td>\n",
+       "      <td>$73,250.49</td>\n",
+       "      <td>$43,960.75</td>\n",
+       "      <td>$10,701.87</td>\n",
+       "      <td>$30,894.52</td>\n",
+       "      <td>$39,579.43</td>\n",
+       "      <td>$21,167.60</td>\n",
+       "      <td>$12,453.85</td>\n",
+       "      <td>$19,080.40</td>\n",
+       "      <td>$20,543.00</td>\n",
        "      <td>...</td>\n",
-       "      <td>3438.29</td>\n",
-       "      <td>3438.29</td>\n",
-       "      <td>2793.21</td>\n",
-       "      <td>2742.95</td>\n",
-       "      <td>2576.34</td>\n",
-       "      <td>2266.54</td>\n",
-       "      <td>2659.18</td>\n",
-       "      <td>2775.86</td>\n",
-       "      <td>1111.47</td>\n",
-       "      <td>1318.33</td>\n",
+       "      <td>$3,438.29</td>\n",
+       "      <td>$3,438.29</td>\n",
+       "      <td>$2,793.21</td>\n",
+       "      <td>$2,742.95</td>\n",
+       "      <td>$2,576.34</td>\n",
+       "      <td>$2,266.54</td>\n",
+       "      <td>$2,659.18</td>\n",
+       "      <td>$2,775.86</td>\n",
+       "      <td>$1,111.47</td>\n",
+       "      <td>$1,318.33</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -684,31 +684,38 @@
        "</div>"
       ],
       "text/plain": [
-       "EC2-Name Weeks         1         2         3         4         5         6  \\\n",
-       "21          22  49326.39  41283.48  43857.73  32106.50  26520.98  20613.60   \n",
-       "22          23  49299.11  42171.36  26019.21  31950.52  27102.72  20866.44   \n",
-       "23          24  62570.05  42687.96  20914.81  32824.60  29119.87  21101.85   \n",
-       "24          25  85672.67  43086.54  15780.66  34643.33  32981.04  21160.02   \n",
-       "25          26  73250.49  43960.75  10701.87  30894.52  39579.43  21167.60   \n",
+       "EC2-Name    Weeks            1            2            3            4  \\\n",
+       "21        Week 22  $49,326.39   $41,283.48   $43,857.73   $32,106.50    \n",
+       "22        Week 23  $49,299.11   $42,171.36   $26,019.21   $31,950.52    \n",
+       "23        Week 24  $62,570.05   $42,687.96   $20,914.81   $32,824.60    \n",
+       "24        Week 25  $85,672.67   $43,086.54   $15,780.66   $34,643.33    \n",
+       "25        Week 26  $73,250.49   $43,960.75   $10,701.87   $30,894.52    \n",
        "\n",
-       "EC2-Name         7         8         9  ...       22       23       24  \\\n",
-       "21        10890.39  18333.30  20100.29  ...  3381.43  3381.43  2787.15   \n",
-       "22        10944.99  18886.68  20532.05  ...  3472.20  3442.94  2797.79   \n",
-       "23        11608.38  18614.13  20583.64  ...  3440.95  3438.29  2793.00   \n",
-       "24        12455.52  18673.47  21215.71  ...  3438.29  3438.29  2792.73   \n",
-       "25        12453.85  19080.40  20543.00  ...  3438.29  3438.29  2793.21   \n",
+       "EC2-Name            5            6            7            8            9  \\\n",
+       "21        $26,520.98   $20,613.60   $10,890.39   $18,333.30   $20,100.29    \n",
+       "22        $27,102.72   $20,866.44   $10,944.99   $18,886.68   $20,532.05    \n",
+       "23        $29,119.87   $21,101.85   $11,608.38   $18,614.13   $20,583.64    \n",
+       "24        $32,981.04   $21,160.02   $12,455.52   $18,673.47   $21,215.71    \n",
+       "25        $39,579.43   $21,167.60   $12,453.85   $19,080.40   $20,543.00    \n",
        "\n",
-       "EC2-Name       25       26       27       28       29       30       31  \n",
-       "21        2321.59  2513.62  2270.83  3095.74  2775.86  1347.87  1318.83  \n",
-       "22        2405.07  2514.28  2291.84  2703.46  2775.86   980.13  1318.56  \n",
-       "23        2432.98  2513.62  2248.68  2703.46  2775.86   754.71  1318.30  \n",
-       "24        2554.90  2851.07  2282.36  2703.46  2775.86   870.38  1317.50  \n",
-       "25        2742.95  2576.34  2266.54  2659.18  2775.86  1111.47  1318.33  \n",
+       "EC2-Name  ...          22          23          24          25          26  \\\n",
+       "21        ...  $3,381.43   $3,381.43   $2,787.15   $2,321.59   $2,513.62    \n",
+       "22        ...  $3,472.20   $3,442.94   $2,797.79   $2,405.07   $2,514.28    \n",
+       "23        ...  $3,440.95   $3,438.29   $2,793.00   $2,432.98   $2,513.62    \n",
+       "24        ...  $3,438.29   $3,438.29   $2,792.73   $2,554.90   $2,851.07    \n",
+       "25        ...  $3,438.29   $3,438.29   $2,793.21   $2,742.95   $2,576.34    \n",
+       "\n",
+       "EC2-Name          27          28          29          30          31  \n",
+       "21        $2,270.83   $3,095.74   $2,775.86   $1,347.87   $1,318.83   \n",
+       "22        $2,291.84   $2,703.46   $2,775.86     $980.13   $1,318.56   \n",
+       "23        $2,248.68   $2,703.46   $2,775.86     $754.71   $1,318.30   \n",
+       "24        $2,282.36   $2,703.46   $2,775.86     $870.38   $1,317.50   \n",
+       "25        $2,266.54   $2,659.18   $2,775.86   $1,111.47   $1,318.33   \n",
        "\n",
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -804,10 +811,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fa731d71f10>"
+       "<matplotlib.legend.Legend at 0x7f2597a94750>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1145,7 @@
        "[8 rows x 29 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1914,7 +1921,7 @@
        "[26 rows x 31 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
