--- a/datadog/datadog-by-service.ipynb
+++ b/datadog/datadog-by-service.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +201,7 @@
        "[4 rows x 39 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
@@ -273,6 +273,477 @@
    "source": [
     "dfService.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 37 entries, 0 to 36\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Service        37 non-null     object \n",
+      " 1   Service Total  37 non-null     float64\n",
+      " 2   Month 1        37 non-null     float64\n",
+      " 3   Month 2        37 non-null     float64\n",
+      " 4   Month 3        37 non-null     float64\n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 1.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataServiceTransposed = '/home/joe/data/datadog/by-service-transposed.csv'\n",
+    "dfSvcT = pd.read_csv(dataServiceTransposed).fillna(0)\n",
+    "dfSvcT.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Service</th>\n",
+       "      <th>Service Total</th>\n",
+       "      <th>Month 1</th>\n",
+       "      <th>Month 2</th>\n",
+       "      <th>Month 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>EC2-Instances</td>\n",
+       "      <td>2748018.80</td>\n",
+       "      <td>854158.34</td>\n",
+       "      <td>884052.90</td>\n",
+       "      <td>1009807.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>EC2-Other</td>\n",
+       "      <td>671008.50</td>\n",
+       "      <td>245472.55</td>\n",
+       "      <td>213944.78</td>\n",
+       "      <td>211591.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>S3</td>\n",
+       "      <td>527273.08</td>\n",
+       "      <td>192020.34</td>\n",
+       "      <td>169241.68</td>\n",
+       "      <td>166011.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>EC2-ELB</td>\n",
+       "      <td>342327.75</td>\n",
+       "      <td>127500.34</td>\n",
+       "      <td>111625.08</td>\n",
+       "      <td>103202.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Premium Support</td>\n",
+       "      <td>165000.00</td>\n",
+       "      <td>55000.00</td>\n",
+       "      <td>55000.00</td>\n",
+       "      <td>55000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>EMR</td>\n",
+       "      <td>81614.73</td>\n",
+       "      <td>26237.36</td>\n",
+       "      <td>23823.06</td>\n",
+       "      <td>31554.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>RDS</td>\n",
+       "      <td>28292.69</td>\n",
+       "      <td>9799.87</td>\n",
+       "      <td>9438.24</td>\n",
+       "      <td>9054.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>CloudFront</td>\n",
+       "      <td>23906.86</td>\n",
+       "      <td>8547.63</td>\n",
+       "      <td>8083.85</td>\n",
+       "      <td>7275.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Elasticsearch Service</td>\n",
+       "      <td>16863.41</td>\n",
+       "      <td>7940.95</td>\n",
+       "      <td>4824.43</td>\n",
+       "      <td>4098.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>CloudWatch</td>\n",
+       "      <td>14490.36</td>\n",
+       "      <td>14428.61</td>\n",
+       "      <td>49.91</td>\n",
+       "      <td>11.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>CloudSearch</td>\n",
+       "      <td>12528.30</td>\n",
+       "      <td>4492.55</td>\n",
+       "      <td>3953.06</td>\n",
+       "      <td>4082.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Redshift</td>\n",
+       "      <td>7273.35</td>\n",
+       "      <td>2449.35</td>\n",
+       "      <td>2372.95</td>\n",
+       "      <td>2451.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>ElastiCache</td>\n",
+       "      <td>6588.67</td>\n",
+       "      <td>2220.10</td>\n",
+       "      <td>2148.48</td>\n",
+       "      <td>2220.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Tax</td>\n",
+       "      <td>3601.57</td>\n",
+       "      <td>1284.13</td>\n",
+       "      <td>1158.03</td>\n",
+       "      <td>1159.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Route 53</td>\n",
+       "      <td>2773.20</td>\n",
+       "      <td>1020.43</td>\n",
+       "      <td>1065.59</td>\n",
+       "      <td>687.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Config</td>\n",
+       "      <td>1231.66</td>\n",
+       "      <td>338.22</td>\n",
+       "      <td>415.72</td>\n",
+       "      <td>477.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Key Management Service</td>\n",
+       "      <td>843.29</td>\n",
+       "      <td>302.00</td>\n",
+       "      <td>283.46</td>\n",
+       "      <td>257.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>DynamoDB</td>\n",
+       "      <td>843.04</td>\n",
+       "      <td>438.40</td>\n",
+       "      <td>227.75</td>\n",
+       "      <td>176.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Lambda</td>\n",
+       "      <td>234.21</td>\n",
+       "      <td>157.22</td>\n",
+       "      <td>33.44</td>\n",
+       "      <td>43.54</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Kinesis</td>\n",
+       "      <td>195.66</td>\n",
+       "      <td>68.82</td>\n",
+       "      <td>66.60</td>\n",
+       "      <td>60.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>CloudTrail</td>\n",
+       "      <td>193.68</td>\n",
+       "      <td>111.51</td>\n",
+       "      <td>82.17</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>SQS</td>\n",
+       "      <td>110.57</td>\n",
+       "      <td>31.10</td>\n",
+       "      <td>30.75</td>\n",
+       "      <td>48.72</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>VPC</td>\n",
+       "      <td>109.65</td>\n",
+       "      <td>74.25</td>\n",
+       "      <td>35.40</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>EC2 Container Registry (ECR)</td>\n",
+       "      <td>96.04</td>\n",
+       "      <td>50.57</td>\n",
+       "      <td>30.22</td>\n",
+       "      <td>15.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Kinesis Firehose</td>\n",
+       "      <td>29.10</td>\n",
+       "      <td>10.82</td>\n",
+       "      <td>9.76</td>\n",
+       "      <td>8.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>WAF</td>\n",
+       "      <td>15.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>5.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SNS</td>\n",
+       "      <td>14.45</td>\n",
+       "      <td>6.73</td>\n",
+       "      <td>4.13</td>\n",
+       "      <td>3.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>API Gateway</td>\n",
+       "      <td>5.92</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>4.92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Elastic File System</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Athena</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SES</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Glacier</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>WorkSpaces</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SimpleDB</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Budgets</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>X-Ray</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Inspector</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Service  Service Total    Month 1    Month 2  \\\n",
+       "31                 EC2-Instances     2748018.80  854158.34  884052.90   \n",
+       "36                     EC2-Other      671008.50  245472.55  213944.78   \n",
+       "19                            S3      527273.08  192020.34  169241.68   \n",
+       "22                       EC2-ELB      342327.75  127500.34  111625.08   \n",
+       "17               Premium Support      165000.00   55000.00   55000.00   \n",
+       "25                           EMR       81614.73   26237.36   23823.06   \n",
+       "26                           RDS       28292.69    9799.87    9438.24   \n",
+       "20                    CloudFront       23906.86    8547.63    8083.85   \n",
+       "16         Elasticsearch Service       16863.41    7940.95    4824.43   \n",
+       "12                    CloudWatch       14490.36   14428.61      49.91   \n",
+       "34                   CloudSearch       12528.30    4492.55    3953.06   \n",
+       "29                      Redshift        7273.35    2449.35    2372.95   \n",
+       "5                    ElastiCache        6588.67    2220.10    2148.48   \n",
+       "7                            Tax        3601.57    1284.13    1158.03   \n",
+       "11                      Route 53        2773.20    1020.43    1065.59   \n",
+       "8                         Config        1231.66     338.22     415.72   \n",
+       "13        Key Management Service         843.29     302.00     283.46   \n",
+       "14                      DynamoDB         843.04     438.40     227.75   \n",
+       "15                        Lambda         234.21     157.22      33.44   \n",
+       "24                       Kinesis         195.66      68.82      66.60   \n",
+       "23                    CloudTrail         193.68     111.51      82.17   \n",
+       "32                           SQS         110.57      31.10      30.75   \n",
+       "27                           VPC         109.65      74.25      35.40   \n",
+       "30  EC2 Container Registry (ECR)          96.04      50.57      30.22   \n",
+       "9               Kinesis Firehose          29.10      10.82       9.76   \n",
+       "28                           WAF          15.00       5.00       5.00   \n",
+       "4                            SNS          14.45       6.73       4.13   \n",
+       "0                    API Gateway           5.92       0.49       0.52   \n",
+       "1            Elastic File System           0.92       0.92       0.00   \n",
+       "35                        Athena           0.13       0.12       0.00   \n",
+       "3                            SES           0.10       0.03       0.03   \n",
+       "21                       Glacier           0.00       0.00       0.00   \n",
+       "10                    WorkSpaces           0.00       0.00       0.00   \n",
+       "6                       SimpleDB           0.00       0.00       0.00   \n",
+       "33                       Budgets           0.00       0.00       0.00   \n",
+       "2                          X-Ray           0.00       0.00       0.00   \n",
+       "18                     Inspector           0.00       0.00       0.00   \n",
+       "\n",
+       "       Month 3  \n",
+       "31  1009807.56  \n",
+       "36   211591.16  \n",
+       "19   166011.06  \n",
+       "22   103202.32  \n",
+       "17    55000.00  \n",
+       "25    31554.31  \n",
+       "26     9054.58  \n",
+       "20     7275.38  \n",
+       "16     4098.04  \n",
+       "12       11.84  \n",
+       "34     4082.70  \n",
+       "29     2451.05  \n",
+       "5      2220.10  \n",
+       "7      1159.41  \n",
+       "11      687.18  \n",
+       "8       477.72  \n",
+       "13      257.82  \n",
+       "14      176.89  \n",
+       "15       43.54  \n",
+       "24       60.24  \n",
+       "23        0.00  \n",
+       "32       48.72  \n",
+       "27        0.00  \n",
+       "30       15.25  \n",
+       "9         8.52  \n",
+       "28        5.00  \n",
+       "4         3.59  \n",
+       "0         4.92  \n",
+       "1         0.00  \n",
+       "35        0.00  \n",
+       "3         0.03  \n",
+       "21        0.00  \n",
+       "10        0.00  \n",
+       "6         0.00  \n",
+       "33        0.00  \n",
+       "2         0.00  \n",
+       "18        0.00  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfSvcT['Service'] = dfSvcT['Service'].replace({'\\$':''}, regex=True).astype(str)\n",
+    "dfSvcT['Service'] = dfSvcT['Service'].replace({'\\(\\)':''}, regex=True).astype(str)\n",
+    "dfSvcT.sort_values('Service Total', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
